--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.3",
+    "@react-three/drei": "^9.120.4",
+    "@react-three/fiber": "^9.0.0-alpha.8",
     "@types/three": "^0.170.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.13.5",
     "lucide-react": "^0.468.0",
     "next": "15.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwind-merge": "^2.5.5",
     "three": "^0.171.0",
     "three-stdlib": "^2.34.0"
   },
